# rust-clipboard-uploader

./: ._.claude  AGENTS.md  CLAUDE.md  CLAUDE_TASK.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: .smbdeleteAAA156b72a  .smbdeleteAAA156b72b  .smbdeleteAAA156b72c  main.rs
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
