[package]
name = "rust-clipboard-uploader"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.24"
egui = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
directories = "4.0"
anyhow = "1.0"
arboard = "2.0"
image = "0.24"
