[package]
name = "rust-clipboard-uploader"
version = "0.3.6"
edition = "2021"
description = "从剪贴板读取图片并上传到图床的 GUI 工具"
license = "MIT"

[dependencies]
eframe = { version = "0.29", default-features = true }
egui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "multipart"] }
directories = "5.0"
anyhow = "1.0"
arboard = "3.4"
image = { version = "0.25", default-features = false, features = ["png"] }
global-hotkey = "0.6"
tray-icon = "0.19"
notify-rust = "4"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
