[package]
name = "rust-clipboard-uploader-tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.4", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
directories = "4.0"
anyhow = "1.0"
arboard = "2.0"
image = "0.24"
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
